--- a/notebooks/urine_based_health_report.ipynb
+++ b/notebooks/urine_based_health_report.ipynb
@@ -3143,7 +3143,7 @@
     "        rec =f\"It is advised that you drink water and rehydrate before {rec_time}.\"\n",
     "    elif rehydrate_time[0]==last_water:\n",
     "        rec_time = last_water.strftime('%I:%M %p')\n",
-    "        rec = f\"You did not drink enough water the last time drank water (at {rec_time}), it is advised you drink more water immediately.\"\n",
+    "        rec = f\"You did not drink enough water the last time you drank water (at {rec_time}), it is advised you drink more water immediately.\"\n",
     "    else:\n",
     "        rec_time = rehydrate_time[0].strftime('%I:%M %p')\n",
     "        rec =f\"It is advised that you drink water and rehydrate before {rec_time}.\"\n",
